[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-stringbean"
version = "0.0.1"
authors = [
    {name = "Annabelle Coles", email = "acoles@salk.edu"}]   
description="Documentation for Bella Vista"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha"]
dependencies = [
    "sphinx>=7.3.7",
    "sphinx-design>=0.5.0",
    "sphinxawesome-theme>=5.2.0",
    "myst-nb>=4.0.0"
]

[project.urls]
Documentation = "https://baby-stringbean.readthedocs.io"
